--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "manifest_version": 2,
 
-    "name": "Mr Wizard plays w/css",
+    "name": "Experimental Pizza",
     "description": "Y U BREAK TEH STYLEZ?",
     "version": "1.0",
 
     "permissions": [
-        "tabs", "http://*/*"
+        "tabs", "http://*/*", "https://*/*"
     ],
 
     "background": {
@@ -14,7 +14,7 @@
         "persistent": false
     },
     "browser_action": {
-        "default_title": "Wizard",
+        "default_title": "body.pizza",
         "default_icon": "images/pizzaOff.png"
     }
 }
