--- a/pizza/manifest.json
+++ b/pizza/manifest.json
@@ -4,6 +4,7 @@
 	"name": "Experimental Pizza",
 	"description": "Plugin to easily toggle a test body class",
 	"version": "1.1",
+	"options_page": "options.html",
 
 	"permissions": [
 		"tabs",
@@ -16,9 +17,9 @@
 		"scripts": ["pizzaStore.js", "background.js"],
 		"persistent": true
 	},
+
 	"browser_action": {
 		"default_title": "body.pizza",
 		"default_icon": "images/pizzaOff.png"
-	},
-	"options_page": "options.html"
+	}
 }
