--- a/pizza/manifest.json
+++ b/pizza/manifest.json
@@ -2,8 +2,8 @@
 	"manifest_version": 2,
 
 	"name": "Experimental Pizza",
-	"description": "Plugin to easily toggle a test body class",
-	"version": "1.2",
+	"description": "Plugin to easily toggle a classname on an element",
+	"version": "1.21",
 	"options_page": "options.html",
 
 	"permissions": [
